--- a/Transfer/transfer/src/index.css
+++ b/Transfer/transfer/src/index.css
@@ -12,6 +12,11 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+body {
+    background-image: url('./images/bg.webp'); /* Resim yolu */
+    background-size: cover; /* Resmi kaplama */
+    background-position: center; /* Ortala */
+}
 
 a {
   font-weight: 500;
@@ -22,13 +27,7 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
+
 
 h1 {
   font-size: 3.2em;
