--- a/Transfer/transfer/src/index.css
+++ b/Transfer/transfer/src/index.css
@@ -4,7 +4,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+
   background-color: #242424;
 
   font-synthesis: none;
@@ -16,6 +16,7 @@ body {
     background-image: url('./images/bg.webp'); /* Resim yolu */
     background-size: cover; /* Resmi kaplama */
     background-position: center; /* Ortala */
+    margin: 0px;
 }
 
 a {
